# sandalphone

./: .envrc  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PHASE1_CHECKLIST.md  PHASE1_COMPLETE.md  RAMBLES.txt  README.md  SERVICE_MANAGEMENT.md  pyproject.toml
cloud/: .env.example  requirements.txt
cloud/src/: realtime_translation_pipeline.py  telegram_bot.py  voice_call_manager.py
docs/: DEEPL_SETUP.md  DEPLOYMENT.md  KNOWN_ISSUES.md  NLLB_MIGRATION.md  RAMBLES_MVP_PLAN.md  realtime_voice_mode_plan.md  setup-tunnel.md  tailscale-setup.md  telegram-setup.md  voice-calls-setup.md  vps_voice_gateway_v1.md
levi_cli/: main.py
levi_cli/commands/: config.py  logs.py  services.py
levi_cli/core/: config_manager.py  log_manager.py  project.py  service_manager.py
levi_cli/utils/: output.py
mac/: .env.example  QUICKSTART_STREAMING.md  STREAMING_TTS.md
mac/examples/: streaming_demo.py
mac/src/: main.py  streaming_translation_service.py  test_websocket.py  translation_service.py
mac/src/llm/: deepl_translation_client.py  nllb_translation_client.py  translation_client.py  translation_factory.py
mac/src/stt/: whisper_client.py
mac/src/tts/: base.py  factory.py  qwen_tts_client.py  vibevoice_client.py
mac/tests/: test_streaming_tts.py  test_websocket_streaming.py
scripts/: com.levi.mac-backend.plist  com.levi.telegram-bot.plist  manage-services.sh
vps-gateway/: .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
vps-gateway/deploy/nginx/: voice-gateway.conf
vps-gateway/scripts/: deploy-preflight.mjs  doctor-callpath.mjs  doctor-local.mjs  install-vps.sh  smoke-live.mjs
vps-gateway/src/: cli-env-file.ts  cli-funnel.ts  cli.ts  config.ts  index.ts
(+32 files in other folders)
