[project]
name = "levi"
version = "0.2.0"
description = "Voice-Driven AI Assistant for Spanish/English Translation"
requires-python = ">=3.13"

dependencies = [
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mac = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "mlx-lm>=0.19.0",
    "mlx-audio>=0.2.0",
]

cloud = [
    "python-telegram-bot>=21.0",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "aiohttp>=3.9.0",
]

dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
